# persista

./: Cargo.toml  LICENSE  README.md
src/: clipboard.rs  data_access.rs  database.rs  enums.rs  errors.rs  main.rs  structs.rs  transformations.rs  user_interface.rs  util.rs  window.rs
