[package]
name = "persista"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clipboard-win = "5.0.0"
eframe = "0.25.0"
egui = "0.25.0"
epi = "0.17.0"
persy = "1.4.7"
serde = {version = "1.0.195", features = ["derive"]}
uuid = {features = ["v4"]}
winapi = "0.3.9"

[env]
RUST_BACKTRACE = "1"

error_on_unformatted = true
group_imports = "One"
imports_granularity = "Crate"
